# notional-revelation

./: .gitpod.yml  .pre-commit-config.yml  Dockerfile  LICENSE  README.md  pyproject.toml
mypresentation/: slides.md
notebooks/: fetch_page_turn_into_reveal.ipynb
src/helpers/: __init__.py
src/notion2md/: notion_block_content_extractors.py  notion_block_templates.py  page_converter.py
