[tool.poetry]
name = "notional-revelation"
version = "0.1.0"
description = ""
authors = ["Hugo <hugo.evers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
revelation = "^2.0.0"
notion-client = "^0.7.1"
renderdown = "^0.2.0"
python-dotenv = "^0.19.1"
pydantic = {git = "https://github.com/PrettyWood/pydantic.git", rev = "field-property"}
notional = "^0.0.7"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
nbdev = "^1.1.22"
pre-commit = "^2.15.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

